--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
-/* You can add global styles to this file, and also import other style files */
+
+/* Reset CSS */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.container{
+  opacity: 1;
+  padding: 48px;
+  background-color: #ECF3F8;
+}
+
+
+a{
+  text-decoration: none !important;
+}
