Atualizações no css do dashboard , left-menu e styles

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,11 @@
 
 <app-header></app-header>
 <app-left-menu  ></app-left-menu>
-<body class="container">
-<app-dashboard></app-dashboard>
-<app-episodes></app-episodes>
-</body>
+<div class="container">
+
+
+
+        <app-dashboard></app-dashboard>
+        <app-episodes></app-episodes>
+
+</div>
