--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -5,7 +5,10 @@
 }
 
 .profile-card {
-  height: 213px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-height: 213px;
   background: white;
   padding: 24px;
   border-radius: 6px;
@@ -22,22 +25,12 @@
 }
 
 .profile-info {
-  display: grid;
-  grid-template-columns: auto 1fr;
+  display: flex;
   align-items: center;
   gap: 15px;
-  height: 84px;
-
-}
-
-.profile-info h2 {
-  color: #045660;
-  margin: 0;
-  font-size: 16px;
 }
 
 .profile-info p {
-  font-size: 13px;
   margin: 2px 0 5px;
 }
 
@@ -46,38 +39,24 @@
   margin-bottom: 10px;
 }
 
+.icons p{
+  margin-top: 8px;
+}
+
 .icons a {
-  color: #045660;
   margin-right: 10px;
-  font-size: 1.3rem;
 }
 
 .about {
   margin-top: 25px;
 }
 
-.about h3 {
-  color: #045660;
-  margin-bottom: 5px;
-  font-size: 19px
-}
-
-.about p {
-font-family: 'Roboto', sans-serif;
-font-weight: 400;
-font-style: normal;
-font-size: 13px;
-line-height: 100%;
-letter-spacing: 0%;
-}
 .section {
   margin-top: 20px;
 }
 
 .section h3 {
-  color: #045660;
   margin-bottom: 10px;
-  
 }
 
 .cards-container {
@@ -87,7 +66,7 @@ letter-spacing: 0%;
 }
 
 .card {
-  background: white;
+  background: #ffffff;
   flex: 1;
   min-width: 300px;
   padding: 15px;
@@ -103,3 +82,10 @@ letter-spacing: 0%;
   font-size: 0.9rem;
   color: #777;
 }
+
+
+
+
+
+
+
