--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 /* Reset CSS */
 * {
   margin: 0;
@@ -6,13 +5,52 @@
   box-sizing: border-box;
 }
 
-.container{
-  opacity: 1;
-  padding: 48px;
+/* Layout base */
+body {
   background-color: #ECF3F8;
+  font-family: 'Roboto', sans-serif;
 }
 
+/* Mantém o espaço do header fixo (52.6px + padding vertical ≈ 68px) */
+.container {
+  opacity: 1;
+  padding: 88px 48px 48px; /* 88px no topo para dar espaço pro header */
+  background-color: #ECF3F8;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
 
-a{
+/* Links */
+a {
   text-decoration: none !important;
 }
+
+
+/* ======================= FONTES ======================= */
+
+p, h2, h3{
+  font-family: 'Roboto', sans-serif;
+  font-style: Bold;
+  letter-spacing: 0%;
+  line-height: 100%;
+}
+
+p{
+  font-family: 'Roboto',sans-serif;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+h2, h3{
+  color: #045660;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  font-style: Bold;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0%;
+}
+
+/* ======================= FONTES FIM ======================= */
