adicionando experiencias no dashboard

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -36,23 +36,23 @@
     <div class="cards-container">
 
       <div class="card">
-        <p><strong>Nome do Curso</strong></p>
-        <p>Nome da Instituição</p>
-        <p class="data">12/12/2025 | Cursando</p>
+        <p><strong>C# - Do básico ao avançado</strong></p>
+        <p>Udemy</p>
+        <p class="data">01/01/2025 | 01/09/2025</p>
       </div>
 
       <div class="card">
-        <p><strong>Nome do Curso</strong></p>
+        <p><strong>JavaScript - Do básico ao avançado </strong></p>
         <p>Nome da Instituição</p>
-        <p class="data">12/12/2025 | Cursando</p>
+        <p class="data">08/2024 | Finalizado</p>
       </div>
 
       <div class="card">
-        <p><strong>Nome do Curso</strong></p>
-        <p>Nome da Instituição</p>
-        <p class="data">12/12/2025 | Cursando</p>
+        <p><strong>Angular - O Guia definitivo das Principais Funcionalidades</strong></p>
+        <p>Udemy</p>
+        <p class="data">01/12/2025 | Cursando</p>
       </div>
-      
+
     </div>
   </div>
 
@@ -61,24 +61,73 @@
     <div class="cards-container">
 
       <div class="card">
-        <p><strong>Nome da Empresa</strong></p>
-        <p>Cargo</p>
-        <p class="data">12/12/2025 | 12/12/2025</p>
-        <p>Descrição das atividades desempenhadas.</p>
+        <p><strong>CMA MERCADOS</strong></p>
+        <p>ANALISTA DE SUPORTE PL</p>
+        <p class="data">Set 2023 — Abr 2025 </p>
+        <ul>
+        <b>Principais Atribuições:</b>
+
+            <li>Análise e suporte ao serviço de roteamento de ordens (OMS) para plataformas como homebroker e terminal de cotação, utilizadas por corretoras.</li>
+            <li>Atuação com protocolo FIX (Financial Information eXchange) para integrações e análises de mensagens de mercado.</li>
+            <li>Atendimento técnico e funcional aos usuários através da plataforma Zoho Desk.</li>
+
+            <b>Principais atividades:</b>
+
+            <li>Atendimentos de segundo nível a corretoras e instituições financeiras, com foco em troubleshooting de ordens e mensagens financeiras via FIX.</li>
+
+            <li>Análises técnicas de logs e mensagens para identificar falhas em ambientes de produção, homologação e simulação.</li>
+
+            <li>Interação com times de desenvolvimento, infraestrutura e operações para resolução de incidentes, melhoria de performance e deploys assistidos.</li>
+
+            <li>Criei e mantive documentação interna com orientações para tratativas de erros recorrentes e onboarding de novos clientes e criação de cartas de versionamentos disponibilizados.</li>
+
+            <li>Elaboração de querys para banco de dados, para ajudar na analise de troubleshooting.</li>
+            <b>Softwares e Tecnologias:</b>
+            <li>Baregrep, BareTail, MySQL, SQL, Zoho & ZohoProjects, Jira, FIX, VS Code, VirtualBox, Sistema OMS.</li>
+        </ul>
       </div>
 
       <div class="card">
-        <p><strong>Nome da Empresa</strong></p>
-        <p>Cargo</p>
-        <p class="data">12/12/2025 | 12/12/2025</p>
-        <p>Descrição das atividades desempenhadas.</p>
+        <p><strong>LIKE WATER</strong></p>
+        <p>ANALISTA DE SISTEMAS JR</p>
+        <p class="data">Fev 2022 — Fev 2023</p>
+        <ul>
+          <p><b>Principais Atribuições:</b></p>
+          <li>Análise de logs via Linux(ubuntu) e Banco de dados</li>
+          <li>Criação e análise de fluxo de URAs</li>
+          <li>Análises de interações na Genesys Cloud</li>
+          <li>Prestação de suporte via zoho</li>
+          <b>Atividades realizadas:</b>
+          <li> Análise de logs em sistemas Linux (Ubuntu), identificando causas de falhas em integrações e rotas de atendimento</li>
+          <li>Utilizei o MongoDB e Studio 3T para análises pontuais de dados operacionais e comportamento de usuários.</li>
+          <li>Criei e validei fluxos de URA com base em arquivos JSON, assegurando aderência ao roteiro de atendimento previsto.</li>
+          <li>Monitorei interações na plataforma Genesys Cloud, realizando análises de desempenho e experiência do cliente.</li>
+          <li>Suporte técnico a usuários e stakeholders por meio da plataforma Zoho, com foco na resolução ágil de incidentes.</li>
+          <li>Consultas no banco de dados para analises de troubleshooting.</li>
+          <b>Softwares e Tecnologias:</b>
+          <li>Ubuntu Linux, MongoDB, Studio 3T, JSON, Genesys Cloud, Postman, GitHub, Zoho desk, Jira VS Code.</li>
+        </ul>
+        
       </div>
 
       <div class="card">
-        <p><strong>Nome da Empresa</strong></p>
-        <p>Cargo</p>
-        <p class="data">12/12/2025 | 12/12/2025</p>
-        <p>Descrição das atividades desempenhadas.</p>
+        <p><strong>PERNAMBUCANAS</strong></p>
+        <p>ANALISTA DE SISTEMAS JR</p>
+        <p class="data">Nov 2020 — Nov 2021</p>
+        <ul>
+          <p><b>Principais Atribuições:</b></p>
+          <li>Desenvolvimento e manutenção do novo site institucional da Pernambucanas. </li>
+          <li>Análise e atualização de informações de produtos no sistema Magento.</li>
+          <li>Suporte técnico de primeiro nível utilizando Jira Service Desk.</li>
+          <b>Atividades realizadas:</b>
+          <li>Atuei no desenvolvimento de páginas do rodapé do novo site da Pernambucanas, utilizando tecnologias como HTML, CSS e JavaScript.</li>
+          <li>Análises e manutenções em conteúdos de produtos cadastrados no sistema Magento, integrados ao projeto do chatbot no WhatsApp.</li>
+          <li>Utilizei a ferramenta Postman para testar e validar APIs REST utilizadas no site e nos sistemas integrados.</li>
+          <li>Suporte de N1 para usuários internos por meio do Jira Service Desk, registrando e acompanhando chamados e incidentes.</li>
+
+          <b>Softwares e Tecnologias:</b>
+          <li>HTML & CSS, JavaScript, Postman, Magento, Jira, Kanban.</li>
+        </ul>
       </div>
     </div>
   </div>
