Configuração dos services e models, refatoração nos components para consumir api atraves do environment

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,10 +2,7 @@
 <app-header></app-header>
 <app-left-menu  ></app-left-menu>
 <div class="container">
-
-
-
         <app-dashboard></app-dashboard>
         <app-episodes></app-episodes>
-
+        <app-episode-details></app-episode-details>
 </div>
