--- a/src/app/pages/episodes/episodes.html
+++ b/src/app/pages/episodes/episodes.html
@@ -10,6 +10,8 @@
       </tr>
     </thead>
     <tbody>
+    <!--ngFor - Para cada item no array episodes, crie uma <tr> (linha da tabela).-->
+    <!--quando o usuário clicar nessa linha, execute o método goToEpisode passando o id do episódio atual (ep.id)”-->
       <tr *ngFor="let ep of episodes" (click)="goToEpisode(ep.id)" class="clickable">
         <td>#{{ ep.id.toString().padStart(2, '0') }}</td>
         <td>{{ ep.episode.slice(1,3) }}</td>
