Finalizado, characters, characters-details, episodes, episodes-details

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,8 +1,6 @@
+<app-header />
+<app-sidebar-menu />
 
-<app-header></app-header>
-<app-left-menu  ></app-left-menu>
 <div class="container">
-        <app-dashboard></app-dashboard>
-        <app-episodes></app-episodes>
-        <app-episode-details></app-episode-details>
+  <router-outlet />
 </div>
