Ajustes nos estilos de character-list e episodes-list

--- a/src/app/pages/characters/list/character-list.html
+++ b/src/app/pages/characters/list/character-list.html
@@ -1,9 +1,6 @@
 <div class="container">
   <h2>Personagens</h2>
-
-  <div *ngIf="loading">Carregando personagens...</div>
-
-  <table *ngIf="!loading">
+  <table>
     <thead>
       <tr>
         <th>Nome</th>
