Adicionado barra de pesquisa

--- a/src/app/pages/characters/detail/character-detail.html
+++ b/src/app/pages/characters/detail/character-detail.html
@@ -7,10 +7,10 @@
 
         <div class="info-grid">
           <p><strong>Status</strong> {{ character.status }}</p>
-          <p><strong>Location</strong> {{ character.location?.name }}</p>
+          <p><strong>Location</strong> {{ character.location.name }}</p>
           <p><strong>Type</strong> {{ character.type || '--' }}</p>
           <p><strong>Species</strong> {{ character.species }}</p>
-          <p><strong>Origin</strong> {{ character.origin?.name }}</p>
+          <p><strong>Origin</strong> {{ character.origin.name }}</p>
           <p><strong>Gender</strong> {{ character.gender }}</p>
         </div>
       </div>
