--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,13 +1,13 @@
 <div class="dashboard-container">
   <div class="profile-card">
-    
+
     <div class="profile-info">
       <img
       src="imagens/henrique.jpeg"
       alt="Foto de perfil"
       class="profile-img"
     />
-      
+
       <div class="icons">
         <h2>Henrique da Costa Araújo</h2>
         <p>26</p>
@@ -24,11 +24,11 @@
           sistemas de pagamento, Vivência em análise de logs e fluxos de atendimento (Genesys
           Cloud), além de participação no desenvolvimento e manutenção de sites institucionais.
           Perfil analítico, com facilidade para interpretar demandas técnicas e funcionais, propor
-          soluções e atuar na melhoria contínua de sistemas e processos. 
+          soluções e atuar na melhoria contínua de sistemas e processos.
 
         </p>
       </div>
-    
+
   </div>
 
   <div class="section">
@@ -92,7 +92,7 @@
         <p>ANALISTA DE SISTEMAS JR</p>
         <p class="data">Fev 2022 — Fev 2023</p>
         <ul>
-          <p><b>Principais Atribuições:</b></p>
+          <b>Principais Atribuições:</b>
           <li>Análise de logs via Linux(ubuntu) e Banco de dados</li>
           <li>Criação e análise de fluxo de URAs</li>
           <li>Análises de interações na Genesys Cloud</li>
@@ -107,7 +107,7 @@
           <b>Softwares e Tecnologias:</b>
           <li>Ubuntu Linux, MongoDB, Studio 3T, JSON, Genesys Cloud, Postman, GitHub, Zoho desk, Jira VS Code.</li>
         </ul>
-        
+
       </div>
 
       <div class="card">
@@ -115,7 +115,7 @@
         <p>ANALISTA DE SISTEMAS JR</p>
         <p class="data">Nov 2020 — Nov 2021</p>
         <ul>
-          <p><b>Principais Atribuições:</b></p>
+          <b>Principais Atribuições:</b>
           <li>Desenvolvimento e manutenção do novo site institucional da Pernambucanas. </li>
           <li>Análise e atualização de informações de produtos no sistema Magento.</li>
           <li>Suporte técnico de primeiro nível utilizando Jira Service Desk.</li>
