--- a/src/app/shared/components/menu/menu-item/menu-item.html
+++ b/src/app/shared/components/menu/menu-item/menu-item.html
@@ -1,5 +1,5 @@
 <li>
-  <button class="animation-icons">
+  <button class="animation-icons" [routerLink]="url" routerLinkActive="active">
     <img [src]="icon" [alt]="label" />
     @if(isExpanded){<span>{{label}}</span>}
   </button>
