--- a/src/app/shared/components/menu/sidebar/sidebar-menu.html
+++ b/src/app/shared/components/menu/sidebar/sidebar-menu.html
@@ -6,8 +6,8 @@
       </button>
     </li>
 
-    <app-menu-item icon="icons/home.svg" label="Home" [isExpanded]="isExpanded" routerLink="" />
-    <app-menu-item icon="icons/film.svg" label="Episódios" [isExpanded]="isExpanded" routerLink="episodes" />
-    <app-menu-item icon="icons/person.svg" label="Personagens" [isExpanded]="isExpanded" routerLink="characters" />
+    <app-menu-item icon="icons/home.svg" label="Home" [isExpanded]="isExpanded" url="/home" />
+    <app-menu-item icon="icons/film.svg" label="Episódios" [isExpanded]="isExpanded" url="/episodes" />
+    <app-menu-item icon="icons/person.svg" label="Personagens" [isExpanded]="isExpanded" url="/characters" />
   </ul>
 </nav>
