--- a/src/app/pages/header/header.html
+++ b/src/app/pages/header/header.html
@@ -1,11 +1,18 @@
 <div class="display-header">
-    <header class="background-header border-header">
-        <img src="imagens\logo.png"> 
-        <span>Dashboard</span>
-    </header>
-    
+  <header class="background-header border-header">
+    <img src="imagens/logo.png" alt="Logo">
+
+    <!-- 🔍 Barra de busca -->
+     @if(showSearchBar){
+      <input
+        type="text"
+        #search
+        placeholder="Buscar..."
+        (keyup)="onSearchChange(search.value)"
+        class="search-input"
+      />
+     }
+
+    <span>{{pageName}}</span>
+  </header>
 </div>
-
-
-
-
