padronização de nomeclatura de arquivos e componentes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,8 @@
 <app-header />
 <app-sidebar-menu />
 
-<div class="container">
-  <router-outlet />
+<div class="main">
+  <div class="container">
+    <router-outlet />
+  </div>
 </div>
