--- a/src/app/shared/components/menu/menu-item/menu-item.scss
+++ b/src/app/shared/components/menu/menu-item/menu-item.scss
@@ -12,14 +12,13 @@
   cursor: pointer;
 }
 
-  img {
-    width: 24px;
-    height: 24px;
-    color: black;
-  }
-.animation-icons:hover, .active {
-  background-color: rgba(101, 184, 105, 0.678); /* tom suave da borda */
-  transform: translateX(4px); /* leve deslocamento para a direita */
+img {
+  width: 24px;
+  height: 24px;
+  color: black;
 }
-
-
+.animation-icons:hover,
+.active {
+  background-color: #c6e2fa;
+  transform: translateX(4px);
+}
