Correção bug barra de pesquisa, documentado propriedades do código

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -6,9 +6,9 @@
     @if(showSearchBar){
     <input
       type="text"
-      #search
+      [(ngModel)]="searchTerm"
       placeholder="Buscar..."
-      (keyup)="onSearchChange(search.value)"
+      (keyup)="onSearchChange($event)"
       class="search-input"
     />
     }
