--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,7 +2,7 @@
   <header class="background-header border-header">
     <img src="imagens/logo.png" alt="Logo" />
 
-    <!-- 🔍 Barra de busca -->
+    <!-- Barra de busca -->
     @if(showSearchBar){
     <input
       type="text"
